Added Ru TL to Snow Army Added Raid option of Ice Man and Mantis Improve Temp Effect of Snow Core Implant Use proper parent for Ice shard body parts Snow Army corpse thing category renamed

--- a/Languages/Russian/DefInjected/AbilityDefs/AbilitiesAE.xml
+++ b/Languages/Russian/DefInjected/AbilityDefs/AbilitiesAE.xml
@@ -24,5 +24,13 @@
 
 	<AEFleshmassStomach.label>метаболическая переработка</AEFleshmassStomach.label>
 	<AEFleshmassStomach.description>Разложение и повторное поглощение питательных веществ из собственных тканей.</AEFleshmassStomach.description>
+	
+	
+	
+	<AEIceCrystalDestabilization.label>дестабилизировать ледяной кристалл</AEIceCrystalDestabilization.label>
+	<AEIceCrystalDestabilization.description>Довести дестабилизацию ледяного кристалла до критической точки, вызвав взрыв.</AEIceCrystalDestabilization.description>
+
+	<AEThrowSnowBlock.label>бросить снежный блок</AEThrowSnowBlock.label>
+	<AEThrowSnowBlock.description>Бросить гигантский снежный блок в цель на большом расстоянии. Взорвётся распылив жидкий азот после приземления.</AEThrowSnowBlock.description>
 
 </LanguageData>
