--- a/Languages/Russian/DefInjected/ThingCategoryDef/ThingCategories.xml
+++ b/Languages/Russian/DefInjected/ThingCategoryDef/ThingCategories.xml
@@ -4,5 +4,7 @@
 	<BodyPartsAnomalyAE.label>аномалии</BodyPartsAnomalyAE.label>
 	<ItemsAnomalies.label>аномалии</ItemsAnomalies.label>
 	<AnomalyStudyNotes.label>исследовательские заметки</AnomalyStudyNotes.label>
+	<CorpsesEntitySnowArmy.label>SA трупы</CorpsesEntitySnowArmy.label>
+	<AEWeaponsAnomalies.label>аномалии</AEWeaponsAnomalies.label>
 
 </LanguageData>
