--- a/Languages/Russian/DefInjected/ThingDefs/Filth_Various.xml
+++ b/Languages/Russian/DefInjected/ThingDefs/Filth_Various.xml
@@ -3,5 +3,6 @@
 
 	<Filth_AEIceBlood.label>ледяная кровь</Filth_AEIceBlood.label>
 	<Filth_AEIceBloodSmear.label>пятно ледяной крови</Filth_AEIceBloodSmear.label>
+	<Filth_AESpentNitrogen.label>остатки жидкого азота</Filth_AESpentNitrogen.label>
 
 </LanguageData>
