--- a/Languages/Russian/DefInjected/ThingDefs/Items_AE_BodyPart.xml
+++ b/Languages/Russian/DefInjected/ThingDefs/Items_AE_BodyPart.xml
@@ -21,5 +21,10 @@
 
 	<AEThermalReflectiveSkinImplant.label>термо-отражающая кожная железа</AEThermalReflectiveSkinImplant.label>
 	<AEThermalReflectiveSkinImplant.description>Аномальная термо-отражающая кожная железа, которая повторяет структуру отражающей поверхности Передатчика. Клеточная структура кожи изменяется, чтобы отражать как световое, так и тепловое излучение, обеспечивая исключительную защиту от ожогов и тепловых атак. Измененная поверхность прекрасно рассеивает свет, создавая завораживающую игру цветов и сияющее свечение, которое уникальным и поразительным образом повышает привлекательность пользователя. Однако это превращение также делает кожу более хрупкой и восприимчивой к физическим повреждениям.</AEThermalReflectiveSkinImplant.description>
+	
+	
+	
+	<AESnowCoreImplant.label>имплантат с ледяным ядром</AESnowCoreImplant.label>
+	<AESnowCoreImplant.description>Установленный аномальный имплантат, повторяющий ледяное ядро Снежной Армии, позволяет носителю выживать при пониженных температурах. Наноразмерные фроститы вызывают кристаллизацию клеток при ранении, ускоряя регенерацию при пониженных температурах. Однако эта кристаллизация делает клетки уязвимыми к высоким температурам, дестабилизируя их структуру. Тело носителя также понижает температуру окружающего воздуха.\n\nДанное ледяное ядро представляет собой попытку восстановления продвинутой крио-технологии, обнаруженной в останках Снежной Армии SA-05. Однако наше текущее понимание этой технологии неполное, что приводит к созданию менее мощной копии. Для его создания требуется использовать нескольких ядер для достижения функционального, хотя и ослабленного, эффекта.</AESnowCoreImplant.description>
 
 </LanguageData>
