--- a/Languages/Russian/DefInjected/HediffDef/Hediffs_AE_BodyPart.xml
+++ b/Languages/Russian/DefInjected/HediffDef/Hediffs_AE_BodyPart.xml
@@ -21,5 +21,11 @@
 	<AEThermalReflectiveSkinImplant.label>термо-отражающая кожная железа</AEThermalReflectiveSkinImplant.label>
 	<AEThermalReflectiveSkinImplant.description>Установленная аномальная термо-отражающая кожная железа, которая повторяет структуру отражающей поверхности Передатчика. Клеточная структура кожи изменяется, чтобы отражать как световое, так и тепловое излучение, обеспечивая исключительную защиту от ожогов и тепловых атак. Измененная поверхность прекрасно рассеивает свет, создавая завораживающую игру цветов и сияющее свечение, которое уникальным и поразительным образом повышает привлекательность пользователя. Однако это превращение также делает кожу более хрупкой и восприимчивой к физическим повреждениям.</AEThermalReflectiveSkinImplant.description>
 	<AEThermalReflectiveSkinImplant.labelNoun>термо-отражающая кожная железа</AEThermalReflectiveSkinImplant.labelNoun>
+	
+	
+	
+	<AESnowCoreImplant.label>имплантат с ледяным ядром</AESnowCoreImplant.label>
+	<AESnowCoreImplant.description>Установленный аномальный имплантат, повторяющий ледяное ядро Снежной Армии, позволяет носителю выживать при пониженных температурах. Наноразмерные фроститы вызывают кристаллизацию клеток при ранении, ускоряя регенерацию при пониженных температурах. Однако эта кристаллизация делает клетки уязвимыми к высоким температурам, дестабилизируя их структуру. Тело носителя также понижает температуру окружающего воздуха.\n\nПолучает двойной урон от огня.\nМаксимальный эффект при -100 градусах, включая регенерацию отсутствующих частей.</AESnowCoreImplant.description>
+	<AESnowCoreImplant.labelNoun>имплантат с ледяным ядром</AESnowCoreImplant.labelNoun>
   
 </LanguageData>
