--- a/Languages/Russian/DefInjected/IncidentDef/Incidents_Map_Misc.xml
+++ b/Languages/Russian/DefInjected/IncidentDef/Incidents_Map_Misc.xml
@@ -44,5 +44,9 @@
 	<AE_IncidentDef_ChristmasStockingsSpawn.label>красный носок</AE_IncidentDef_ChristmasStockingsSpawn.label>
 	<AE_IncidentDef_ChristmasStockingsSpawn.letterLabel>Найден красный носок</AE_IncidentDef_ChristmasStockingsSpawn.letterLabel>
 	<AE_IncidentDef_ChristmasStockingsSpawn.letterText>Ваш колонист заметил неподалеку какой-то объект, упавший с неба. При внимательном рассмотрении кажется, что это красный носок с белыми частями и символом снежинки. Похоже, он наполнен чем-то.</AE_IncidentDef_ChristmasStockingsSpawn.letterText>
+	
+	<AE_IncidentDef_SpeedometerSpawn.label>cпидометр</AE_IncidentDef_SpeedometerSpawn.label>
+	<AE_IncidentDef_SpeedometerSpawn.letterLabel>Найден cпидометр</AE_IncidentDef_SpeedometerSpawn.letterLabel>
+	<AE_IncidentDef_SpeedometerSpawn.letterText>Ваш колонист заметил неподалеку какой-то объект, упавший с неба. При ближайшем рассмотрении он оказался темным круглым прибором с выцветшими цифрами и тонкой красной стрелкой.</AE_IncidentDef_SpeedometerSpawn.letterText>
 
 </LanguageData>
